# never_primp

./: .gitignore  AARCH64_FIX.md  ALL_FIXES_SUMMARY.md  Cargo.toml  LIBCLANG_PATH_FIX.md  LINUX_DEPS_FIX.md  MANYLINUX_FIX.md  ORDERED_HEADERS.md  PACKAGE_STRUCTURE_FIX.md  README.md  README_CN.md  README_EN.md  SPLIT_COOKIES.md  WORKFLOW_FIX.md  example_multipart_encoder.py  example_ordered_headers.py  example_split_cookies.py  pyproject.toml  test.py  test_certs.py  test_content_length_order.py  test_cookie_management.py  test_features.py  test_performance.py
.claude/: settings.local.json
.github/workflows/: build.yml
never_primp/: __init__.py  never_primp.pyi
primp/: __init__.py  primp.pyi
src/: lib.rs  response.rs  traits.rs  utils.rs
tests/: test_main.py
