[package]
name = "primp"
version = "1.0.0"
edition = "2024"
description = "HTTP client that can impersonate web browsers, mimicking their headers and `TLS/JA3/JA4/HTTP2` fingerprints"
authors = ["Neverland"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "primp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py38", "indexmap", "anyhow", "multiple-pymethods"] }
anyhow = "1.0.98"
tracing = { version = "0.1.41", features = ["log-always"] }
pyo3-log = "0.12.3"
wreq = { version = "6.0.0-rc.20", features = [
    "json",
    "cookies",
    "socks",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "multipart",
    "stream",
] }
wreq-util = "3.0.0-rc.6"
encoding_rs = { version = "0.8.35" }
foldhash = "0.1.5"
indexmap = { version = "2.9.0", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["codec"] }  # for multipart
html2text = "0.14.3"
pythonize = "0.24.0"
serde_json = "1.0.140"
rustls-native-certs = "0.8"
http-body-util = "0.1.3"
http = "1.3.1"
mime = "0.3.17"
rand = "0.9.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
